cmake_minimum_required(VERSION 3.7.2)
add_library(link LINK.cpp)
target_include_directories(link PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_library(findmother FindMother.cpp)
target_include_directories(findmother PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_library(ForwardKinematics Rodrigues.cpp ForwardKinematics.cpp)
target_include_directories(ForwardKinematics PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_executable(SetupBipedRobot SetupBipedRobot.cpp)
target_include_directories(SetupBipedRobot PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(SetupBipedRobot link findmother ForwardKinematics)
install(TARGETS SetupBipedRobot DESTINATION ${PROJECT_SOURCE_DIR}/bin)