cmake_minimum_required(VERSION 3.7.2)
add_library(link LINK.cpp)
target_include_directories(link PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_library(findmother FindMother.cpp)
target_include_directories(findmother PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_library(ForwardKinematics Rodrigues.cpp ForwardKinematics.cpp)
target_include_directories(ForwardKinematics PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_library(findroute FindRoute.cpp)
target_include_directories(findroute PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_library(InversKinematics CalcJacobian.cpp)
target_include_directories(InversKinematics PRIVATE ${PROJECT_SOURCE_DIR}/include)
add_executable(Fk SetupBipedRobot.cpp Fk.cpp)
target_include_directories(Fk PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(Fk link findroute findmother ForwardKinematics InversKinematics)
install(TARGETS Fk DESTINATION ${PROJECT_SOURCE_DIR}/bin)